syntax = "proto2";
package im.oidb.cmd0xd50;

// tencent/im/oidb/cmd0xd50/Oidb_0xd50.java

message ExtSnsFrdData {
  optional uint64 frd_uin = 1;
  optional bytes lovers = 11002;
  optional bytes confidante = 21002;
  optional bytes buddy = 31002;
  optional bytes frd_tree = 41001;
  optional bytes chat = 51001;
  optional bytes praise = 61001;
  optional bytes qzone_love = 71001;
  optional bytes qzone_house = 81001;
  optional bytes music_switch = 91001;
  optional bytes mutualmark_alienation = 101001;
  optional bytes unread_message = 111001;
  optional bytes boat = 121001;
  optional bytes close_frd = 131001;
  optional bytes mutualmark_score = 141001;
  optional bytes ksing_switch = 151001;
  optional bytes lbs_share = 181001;
  optional bytes dont_forget_me = 211001;
  optional bytes my_online_status_visible_to_frd = 221001;
  optional bytes frd_online_status_visible_to_me = 221002;
  optional bytes visitor_record = 231001;
  optional bytes frd_steal_record = 231002;
  optional bytes my_steal_record = 231003;
  optional bytes avgame = 241001;
  optional bytes aio_quick_app = 251001;
}

message KSingRelationInfo {
  optional uint32 flag = 1;
}

message ReqBody {
  optional uint64 appid = 1;
  optional uint32 max_pkg_size = 2;
  optional uint32 start_time = 3;
  optional uint32 start_index = 4;
  optional uint32 req_num = 5;
  repeated uint64 uin_list = 6;
  optional uint32 req_lovers = 11002;
  optional uint32 req_confidante = 21002;
  optional uint32 req_buddy = 31002;
  optional uint32 req_frd_tree = 41001;
  optional uint32 req_chat = 51001;
  optional uint32 req_praise = 61001;
  optional uint32 req_qzone_love = 71001;
  optional uint32 req_qzone_house = 81001;
  optional uint32 req_music_switch = 91001;
  optional uint32 req_mutualmark_alienation = 101001;
  optional uint32 req_unread_message = 111001;
  optional uint32 req_boat = 121001;
  optional uint32 req_close_frd = 131001;
  optional uint32 req_mutualmark_score = 141001;
  optional uint32 req_ksing_switch = 151001;
  optional uint32 req_mutualmark_lbsshare = 181001;
  optional uint32 req_dont_forget_me = 211001;
  optional uint32 req_my_online_status_visible_to_frd = 221001;
  optional uint32 req_frd_online_status_visible_to_me = 221002;
  optional uint32 req_visitor_record = 231001;
  optional uint32 req_frd_steal_record = 231002;
  optional uint32 req_my_steal_record = 231003;
  optional uint32 req_avgame = 241001;
  optional uint32 req_aio_quick_app = 251001;
}

message RspBody {
  repeated ExtSnsFrdData update_data = 1;
  optional uint32 over = 11;
  optional uint32 next_start = 12;
  repeated uint64 unfinished_uins = 13;
}
